# paranoid-backup

./: CMakeLists.txt  LICENSE  build.cmd  build.sh
cli/: main.c
doc/: devnotes.txt
inc/: double_linked_list.h  file-attributes.h  file_info.h  filesystem.h  filesystem_tree.h  paranoid_backup_restore.h  paranoid_backup_storage_endpoint.h  paranoid_hashing.h  pb_logger.h  storage_endpoint.h
samples/: CMakeLists.txt  main.c
src/: double_linked_list.c  file-attributes-linux.c  file-attributes-win32.c  file_info.c  filesystem_tree.c  filesystem_win32.c  main.c  merge_sort.c  pb_logger_file.c  storage_endpoint.c
